--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
@@ -81,7 +81,8 @@
     // border-radius: 6px;
     // display: inline-block;
     width: 390px;
-    // height: 190px;
+    height: 190px;
+    object-fit: contain;
     // margin: 13px 9px;
     position: sticky;
   }
