add country and fix decimal in B2B

--- a/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
@@ -68,7 +68,7 @@
 
         <ngx-datatable-column name="Nilai Voucher" prop="nominal">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.nominal | rupiahFormater }}
+            <span>{{row.nominal_format_currency}}</span>
           </ng-template>
         </ngx-datatable-column>
 
