--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -53,9 +53,9 @@
 
                 <div fxLayout="row" fxFlex="60" fxLayoutGap="20px">
                   <mat-form-field fxFlex="20" class="is-light">
-                    <input matInput type="number" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency">
-                    <mat-error
-                      *ngIf="formDetilVoucher.controls['currency'].hasError('required') && formDetilVoucher.controls['currency'].touched ">
+                    <input matInput type="number" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency" *ngIf="user_country !== 'KH'">
+                    <input matInput [inputMask]="currencyInputMask" placeholder="Nilai Penukaran Untuk 1 Koin" formControlName="currency" (blur)="handleDecimal($event)" *ngIf="user_country === 'KH'">
+                    <mat-error>
                       Nilai Penukaran untuk 1 Koin harus diisi.
                     </mat-error>
                   </mat-form-field>
@@ -67,7 +67,8 @@
                     </mat-error>
                   </mat-form-field>
                   <mat-form-field fxFlex="20" class="is-light">
-                    <input matInput type="number" placeholder="Nilai Voucher" formControlName="voucher" readonly>
+                    <input matInput type="number" placeholder="Nilai Voucher" formControlName="voucher" readonly *ngIf="user_country !== 'KH'">
+                    <input matInput [inputMask]="currencyInputMask" placeholder="Nilai Voucher" formControlName="voucher" readonly *ngIf="user_country === 'KH'">
                     <mat-error
                       *ngIf="formDetilVoucher.controls['voucher'].hasError('required') && formDetilVoucher.controls['voucher'].touched ">
                       Nilai Voucher harus diisi.
