--- a/src/app/pages/content-management/privacy/edit/privacy-edit.component.html
+++ b/src/app/pages/content-management/privacy/edit/privacy-edit.component.html
@@ -41,6 +41,17 @@
               </mat-error>
             </mat-form-field>
           </div>
+          <div fxLayout="row">
+            <mat-form-field fxFlex="50" class="is-light form-primary">
+              <mat-select formControlName="country" placeholder="Negara">
+                <mat-option *ngFor="let item of countryList" [value]="item.code" style="text-transform: capitalize;">
+                  {{item.name}}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formPrivacy.controls['country'].hasError('required') && formPrivacy.controls['country'].touched">
+                Negara harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
           <div class="pt-8" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">Konten Kebijakan Privasi</h3>
           </div>
