--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -70,6 +70,12 @@
               Nama Pemilik harus diisi.
             </mat-error>
           </mat-form-field>
+
+          <mat-form-field fxFlex="50" class="is-light form-primary">
+            <mat-select placeholder="Negara" formControlName="country" (selectionChange)="handleCountryPhone($event)">
+              <mat-option *ngFor="let item of countryList" [value]="item.code">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
         <div class="ayo-middle pt-24" fxLayout="column">
           <mat-form-field *ngIf="isDetail && seePhone" class="is-light">
@@ -80,7 +86,7 @@
             <small>Nomor Ponsel</small>
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
               <mat-form-field fxFlex="7" fxFlex.xs="30" class="form-primary">
-                <input matInput value="+62" readonly>
+                <input matInput [value]="country_phone" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
                 <input matInput formControlName="phone" type="tel">
