--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -68,6 +68,13 @@
             </mat-select>
           </mat-form-field>
         </div>
+        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field fxFlex="50" class="is-light form-primary">
+            <mat-select placeholder="Negara" formControlName="country" (selectionChange)="handleCountryPhone($event)">
+              <mat-option *ngFor="let item of countryList" [value]="item.code">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
         <div class="ayo-middle pt-24" fxLayout="column">
 
           <mat-form-field *ngIf="isDetail && seePhone" fxFlex="100" class="is-light">
@@ -78,7 +85,7 @@
             <small>Nomor Ponsel</small>
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
               <mat-form-field fxFlex="7" fxFlex.xs="30" class="form-primary">
-                <input matInput value="+62" readonly>
+                <input matInput [value]="country_phone" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
                 <input matInput formControlName="phone" type="tel">
