--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.scss
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.scss
@@ -26,3 +26,8 @@
   background-color: #eee;
   font-weight: 600;
 }
+
+:host /deep/ .mat-error--custom{
+  font-size: 12px;
+  margin-top: -14px;
+}
