--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -76,38 +76,32 @@
                       item.code}}</mat-option>
                   </mat-select>
                 </mat-form-field>
-
-                <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
-                    <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name
-                      ===
-                      'all' ?
-                      'Semua
-                      Salespoint'
-                      :
-                      item.code}}</mat-option>
+                <mat-form-field fxFlex="12%" class="is-light form-primary">
+                  <mat-select placeholder="City" formControlName="city">
+                    <!-- <mat-option *ngIf="cities.length > 0"
+                      [value]="{value: formFilter.get('territoryCode').value, key: 'territoryCode'}">Semua Kota
+                    </mat-option> -->
+                    <mat-option *ngFor="let item of cities" [value]="item.city">{{item.city}}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="District" formControlName="district" multiple>
-                    <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name
-                      ===
-                      'all' ? 'Semua
-                      District'
-                      :
-                      item.code}}</mat-option>
+                  <mat-select placeholder="District" formControlName="district_code">
+                    <!-- <mat-option *ngIf="districts.length > 0"
+                      [value]="{value: formFilter.get('city').value, key: 'city'}">
+                      Semua District
+                    </mat-option> -->
+                    <mat-option *ngFor="let item of districts" [value]="item.district">{{item.district }}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="12%" class="is-light form-primary">
-                  <mat-select placeholder="Territory" formControlName="territory" multiple>
-                    <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name
-                      ===
-                      'all' ? 'Semua
-                      Territori'
-                      :
-                      item.code}}</mat-option>
+                  <mat-select placeholder="Village" formControlName="village">
+                    <!-- <mat-option *ngIf="districts.length > 0"
+                      [value]="{value: formFilter.get('district').value, key: 'district'}">Semua Village
+                    </mat-option> -->
+                    <mat-option *ngFor="let item of villages" [value]="item.village">{{item.village
+                      }}</mat-option>
                   </mat-select>
-                </mat-form-field> -->
+                </mat-form-field>
               </div>
             </form>
             <div fxLayout="row" fxFlex="20" class="p-24">
@@ -146,13 +140,13 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Customer Name" prop="owner"></ngx-datatable-column>
                 <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Territory Code" prop="division_code" [sortable]="false">
+                <ngx-datatable-column name="Territory Code" prop="teritory_code" [sortable]="false">
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Classification" prop="classification" [sortable]="false">
                 </ngx-datatable-column>
-                <ngx-datatable-column name="City" prop="area_code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="District" prop="district_code" [sortable]="false"></ngx-datatable-column>
-                <ngx-datatable-column name="Village" prop="teritory_code" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="City" prop="city" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="District" prop="district" [sortable]="false"></ngx-datatable-column>
+                <ngx-datatable-column name="Village" prop="village" [sortable]="false"></ngx-datatable-column>
               </ngx-datatable>
             </div>
           </div>
@@ -169,7 +163,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let summary of summaries">
-                    <td>{{ summary.position_code }}</td>
+                    <td>{{ summary.position_ }}</td>
                     <td>{{ summary.total }}</td>
                   </tr>
                   <tr class="active-row" *ngIf="summaries.length === 0">
