--- a/src/app/pages/user-management/rca-agent/edit/rca-agent-edit.component.html
+++ b/src/app/pages/user-management/rca-agent/edit/rca-agent-edit.component.html
@@ -32,6 +32,10 @@
                 Email RCA Agent harus diisi
               </mat-error>
             </mat-form-field>
+            <div>
+              <i style="font-size: 14px;">Pastikan Email dan username sesuai dengan Akun SSO
+                anda.</i>
+            </div>
           </div>
         </div>
 
